--- a/newsApp/package.json
+++ b/newsApp/package.json
@@ -11,7 +11,10 @@
     "react": "16.0.0-alpha.12",
     "react-native": "0.45.1",
     "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
-    "react-navigation": "^1.0.0-beta.11"
+    "react-navigation": "^1.0.0-beta.11",
+    "react-redux": "^5.0.5",
+    "redux": "^3.7.1",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-jest": "20.0.3",
